--- a/hr-api-gateway-zulll/src/main/resources/application.properties
+++ b/hr-api-gateway-zulll/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=hr-api-gatewa-zull
+spring.application.name=hr-api-gateway-zull
 server.port=8765
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
