--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=hr-config-server
 spring.cloud.config.server.git.default-label=main
 server.port=8888
 
-
 spring.cloud.config.server.git.uri=https://github.com/devMarsh4ll/ms-courseconfig
+spring.cloud.config.server.git.username=${GIT_USER}
+spring.cloud.config.server.git.password=${GIT_PASS}
