Login, JWT Token

--- a/hr-api-gateway-zulll/src/main/resources/application.properties
+++ b/hr-api-gateway-zulll/src/main/resources/application.properties
@@ -7,7 +7,6 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
 ribbon.ReadTimeout=20000
 
-
 ##Configuração pra todas as rotas do worker
 zuul.routes.worker.service-id=hr-worker
 zuul.routes.worker.path=/hr-worker/**
@@ -20,3 +19,4 @@ zuul.routes.user.path=/hr-user/**
 
 zuul.routes.oauth.service-id=hr-oauth
 zuul.routes.oauth.path=/hr-oauth/**
+zull.routes.oauth.sensitive-headers=Cookie,Set-Cookie
