Testar em casa!

--- a/hr-config-server/pom.xml
+++ b/hr-config-server/pom.xml
@@ -15,13 +15,17 @@
 	<description>Config Server</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR12</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
+		<dependency>
+        	<groupId>org.springframework.security.oauth.boot</groupId>
+        	<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
